src/Smartstore.Web/wwwroot/components/datagrid/datagrid.scss
/* ... */
.dg-hborder-0 {
    border-inline-end-width: 0 !important;
}


// Toolbar
// -----------------------------------------

.dg-toolbar {
    background-color: var(--dg-toolbar-bg);
    border-bottom: 1px solid var(--dg-border-color);
    padding: 0.375rem;
    @include border-left-radius(var(--border-radius-md));
}

.dg-toolbar .btn {
    position: relative;
    --btn-padding-x: 0.6rem;
}

@include media-breakpoint-down(sm) {
    .touchevents .dg-toolbar {
        overflow-x: auto;
        min-height: 54px;
    }

    .dg-toolbar .btn > i + span {
        display: none;
    }
}

.dg-toolbar-group {
    position: relative;
    display: inline-flex;
    flex-wrap: nowrap;
    column-gap: 2px;
    align-items: center;
    vertical-align: middle;
    padding-inline-end: 0.5rem;
    margin-inline-end: 0.5rem;
    border-inline-end: 1px solid var(--dg-border-color);

    &.omega,
    &:last-child {
        border-inline-end-width: 0;
        padding-inline-end: 0;
        margin-inline-end: 0;
    }

    &.omega {
        margin-inline-start: auto;
    }
}

.dg-toolbar-badge {
    position: absolute !important;
    --badge-font-size: 10px;
}

.dg-commands-toggle {
    display: flex;
}

.dg-commands-dropdown .disabled,
.dg-toolbar .btn.disabled {
    pointer-events: none;
}


// Search Panel
// -----------------------------------------
.dg-search {
    position: absolute;
    opacity: 0;
    inset-inline-start: 0;
    top: 0;
    height: 100%;
    width: var(--dg-search-width);
    border-inline-end: 1px solid var(--dg-border-color);
    transform: translateX(-30px);
    transition: all 0.2s ease-in-out;
    z-index: 0;
    overflow-y: auto;

    &.show {
        opacity: 1;
        transform: translateX(0);
    }
}

.dg-search-header {
    display: flex;
    align-items: center;
    height: 49px;
    border-bottom: 1px solid var(--dg-border-color);
}

.dg-search-body {
}


// Sorting
// -----------------------------------------

.dg-table:not(.dg-resizing) .dg-sortable {
    cursor: pointer;
    //transition: background-color 0.1s;

    &:hover {
        background-color: rgba(#000, 0.035);
    }

    &:active, &.show {
        background-color: rgba(#000, 0.075);
    }
}


// Resizing & Column reordering
// -----------------------------------------

.dg-resize-handle {
    position: absolute;
    display: block;
    top: 0;
    inset-inline-end: -4px;
    bottom: 0;
    width: 10px;
    opacity: 0;
    transform: scaleX(0);
    cursor: col-resize;
    transition: all 0.2s ease-in-out;

    &:after {
        position: absolute;
        content: ' ';
        width: 3px;
        top: 0;
        bottom: 0;
        inset-inline-start: 3px;
        background-color: var(--dg-border-color);
    }

    thead:hover & {
        opacity: 0.65;
        transform: scaleX(1);
    }

    &:hover,
    .dg-resizing & {
        opacity: 1 !important;
    }
}

.dg-drop-indicator {
    position: absolute;
    display: block;
    width: 10px;
    z-index: 9999;
    transform: translateX(-50%);
    pointer-events: none;

    &:before,
    &:after {
        position: absolute;
        display: block;
        content: '';
        width: 0;
        height: 0;
        inset-inline-start: 0;
        border-inline: 5px solid transparent;
    }

    &:before {
        // Arrow down
        border-top: 5px solid $body-color;
        top: 0;
        transform: translateY(-200%);
    }

    &:after {
        // Arrow up
        border-bottom: 5px solid $body-color;
        bottom: 0;
        transform: translateY(200%);
    }
}


// Pinned columns
// -----------------------------------------

@include media-breakpoint-up(sm) {
    .dg-col-pinned {
        position: sticky !important;
        overflow-x: visible !important;
        z-index: 5;

        &.dg-th {
            z-index: 10;
        }

        &.alpha {
            inset-inline-start: 0;
        }

        &.alpha + .alpha {
            // Detail view toggler beneath selector
            inset-inline-start: 48px;
        }

        &.omega {
            inset-inline-end: 0;
        }
    }

    .dg-scrollable .dg-col-pinned {
        &.alpha {
            box-shadow: inset var(--dg-cell-pinned-alpha-inset) 0 0 var(--dg-border-color);
            border-inline-end: 1px solid var(--dg-border-color);
        }

        &.omega {
            box-shadow: inset var(--dg-cell-pinned-omega-inset) 0 0 var(--dg-border-color);
            border-inline-start: 1px solid var(--dg-border-color);
        }

        &:before {
            position: absolute;
            display: block;
            content: "";
            pointer-events: none;
            width: 10px;
            inset-inline-end: -10px;
            top: 0;
            bottom: 0;
            background: linear-gradient(var(--dg-cell-pinned-alpha-gradient-dir), transparent, rgba(#000, .05));
        }

        &.omega:before {
            inset-inline-end: initial;
            inset-inline-start: -10px;
            background: linear-gradient(var(--dg-cell-pinned-omega-gradient-dir), transparent, rgba(#000, .05));
        }
    }
}


// Row selection & Detail view
// -----------------------------------------

.dg-col-selector {
    display: flex;
    justify-content: center;

    .dg-cell + .dg-cell {
        padding-inline-start: 8px;
    }
}

.dg-cell-selector {
    display: flex;
    align-items: center;
    justify-content: center;
    cursor: pointer;
    //display: block;
    margin: 0;
}

.dg-cell-selector-checkbox {
    cursor: pointer;
}

.dg-cell-detail-toggle {
    cursor: pointer;
    opacity: 0.5;
    transition: opacity 0.12s ease-in-out;

    &:hover,
    .dg-tr.expanded & {
        opacity: 1;
    }

    .dg-tr.expanded & > i {
        transform: rotate(90deg);
    }
}
/* ... */

